🚀 COMPLETE PROJECT: Target Theme + Full Functionality
✅ TARGET THEME IMPLEMENTATION COMPLETE
- Applied exact graphical design from mehowbabula/realestatehub backup-pre-subscription-20250809
- Modern oklch() color system with Tailwind v4 compatibility
- Full light/dark mode support with smooth transitions
- Blob animations and gradient backgrounds
- Enhanced sidebar and UI component styling

✅ CORE FEATURES & FUNCTIONALITY
- Complete real estate property management system
- User authentication and authorization
- Property listings with advanced search
- Image upload and processing with AWS S3 integration
- SEO optimization with dynamic meta descriptions
- Responsive design for all devices
- Dashboard with analytics and reporting

✅ ADVANCED SEO SYSTEM
- Dynamic slug generation for clean URLs
- Meta description automation
- Structured data implementation
- Internal linking optimization
- Sitemap generation
- Alt text optimization for images

✅ DEVELOPMENT & TESTING
- Comprehensive test suites
- Performance optimization
- Database migrations and schema updates
- Error handling and monitoring
- Development tools and scripts

✅ TECHNICAL STACK
- Next.js 15.3.5 with App Router
- Tailwind CSS v4 with oklch() colors
- TypeScript for type safety
- Prisma ORM with SQLite
- NextAuth.js for authentication
- AWS S3 for image storage
- Comprehensive testing framework

🎯 READY FOR PRODUCTION
- All functionality preserved and enhanced
- Modern design matching target repository
- Fully tested and optimized
- Complete documentation included

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,20 @@ test
 prompt
 
 server.log
+
+# Test screenshots and debug files
+*.png
+error-debug.png
+login-redirect-test.png
+registration-error.png
+registration-success-error.png
+registration-test-error.png
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+*.tmp
+*.temp
