--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,18 +2,11 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Start Development Server",
 			"type": "shell",
-			"command": "npx",
-			"args": [
-				"next",
-				"dev",
-				"--port",
-				"3005"
-			],
+			"label": "Start Dev Server",
+			"command": "npm run dev",
 			"group": "build",
-			"isBackground": true,
-			"problemMatcher": []
+			"isBackground": true
 		}
 	]
 }
