--- a/package.json
+++ b/package.json
@@ -122,6 +122,6 @@
     "nodemon": "^3.1.10",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
