--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ registration-test-error.png
 # Temporary files
 *.tmp
 *.temp
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
