--- a/.ebextensions/environment.config
+++ b/.ebextensions/environment.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "node server.ts"
+    NodeCommand: "npm start"
   aws:elasticbeanstalk:application:environment:
     NODE_ENV: production
-    PORT: 80
+    PORT: 8080
