Fix: Complete Node.js 22 platform compatibility
- Removed deprecated NodeCommand configuration from .ebextensions files
- Node.js 22 on Amazon Linux 2023 doesn't support legacy container configuration
- Updated Procfile to use 'npm start' instead of direct tsx command
- This resolves 'Unknown or duplicate parameter: NodeCommand' deployment errors
- Platform now uses modern Procfile-based process management

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,2 @@
-option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm start"
+# This file is no longer needed - NodeCommand is configured in environment.config
+# Node.js 22 on Amazon Linux 2023 uses different configuration approach
