--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.21",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
