--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
     "build": "next build",
-    "start": "NODE_ENV=production tsx server.ts",
+    "start": "next start",
+    "start:custom": "NODE_ENV=production tsx server.ts",
     "start:production": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "db:push": "prisma db push",
