--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
+    "dev": "nodemon",
+    "dev:verbose": "nodemon --verbose",
+    "dev:simple": "npx tsx server.ts",
     "build": "next build",
     "start": "next start",
     "start:custom": "NODE_ENV=production tsx server.ts",
@@ -23,7 +25,10 @@
     "deploy:staging": "./scripts/deployment/deploy.sh staging"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.864.0",
+    "@aws-sdk/client-elasticache": "^3.864.0",
     "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/client-ses": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -92,6 +97,7 @@
     "react-resizable-panels": "^3.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
+    "redis": "^5.8.1",
     "sharp": "^0.34.3",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
